Alterar estilo da página

--- a/index.css
+++ b/index.css
@@ -14,8 +14,8 @@ section {
     margin: auto;
     box-shadow: 8px 8px 10px rgb(37, 37, 37);
 }
-footer {
-    color: white;
+div#marca {
+    color: rgb(153, 153, 153);
     text-align: center;
     font-style: italic;
 }
